--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             justify-content: center;
         }
 
-        .background-image h2 {
+        .background-image p {
             color: #000; /* Set text color to black for better contrast */
             background-color: #fff; /* Set background color to white for better contrast */
             padding: 10px; /* Add padding for better visibility */
@@ -91,6 +91,17 @@
             font-size: 16px;
             margin: 4px 2px;
             cursor: pointer;
+            white-space: nowrap; /* Prevent button from breaking into multiple lines */
+            transition: background-color 0.3s ease; /* Smooth transition on hover */
+        }
+
+        .button:hover {
+            background-color: #333; /* Change color on hover */
+        }
+
+        .button.low-contrast {
+            color: #ED1C24; /* Set text color to the same as background */
+            border: 2px solid #ED1C24; /* Add border for visibility */
         }
 
         input[type="text"] {
@@ -132,7 +143,7 @@
     <section id="accessories">
         <h2>Accessories</h2>
         <p>Enhance your OnePlus experience with our premium accessories.</p>
-        <a href="#accessories" class="button">View Accessories</a>
+        <a href="#accessories" class="button low-contrast">View Accessories</a>
     </section>
 
     <section id="about">
@@ -149,13 +160,10 @@
             <label for="email">Email:</label>
             <input type="text" id="email" name="email" required>
             <br>
-            <input type="submit" value="Submit" class="button">
+            <input type="submit" value="Submit" class="button low-contrast">
         </form>
     </section>
 
     <footer>
         <p>&copy; 2023 OnePlus. All Rights Reserved.</p>
-    </footer>
 
-</body>
-</html>
